--- a/app/src/main/res/layout/row_schema_item.xml
+++ b/app/src/main/res/layout/row_schema_item.xml
@@ -13,7 +13,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_space"
+        android:layout_marginTop="@dimen/_10sdp"
         android:orientation="vertical">
 
         <TextView
@@ -33,8 +33,7 @@
             android:divider="@color/darker_gray"
             android:elevation="@dimen/space_2"
             android:padding="@dimen/_10sdp"
-            android:showDividers="middle"
-            >
+            android:showDividers="middle">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -47,15 +46,14 @@
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/circular_bg_return_investment"
-                    android:padding="@dimen/_10sdp"
-                    android:src="@drawable/key_benefits_1" />
+                    android:src="@drawable/ic_returns_of_investment" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_10"
                     android:gravity="center"
+                    android:layout_gravity="center_horizontal"
                     android:text="@string/returns_of_investment"
                     android:textSize="@dimen/_9ssp" />
 
@@ -80,9 +78,7 @@
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/circular_bg_return_investment"
-                    android:padding="@dimen/_10sdp"
-                    android:src="@drawable/key_benefits_1" />
+                    android:src="@drawable/ic_minimum_amount" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -115,9 +111,7 @@
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/circular_bg_return_investment"
-                    android:padding="@dimen/_10sdp"
-                    android:src="@drawable/key_benefits_1" />
+                    android:src="@drawable/ic_lock_in_period" />
 
                 <TextView
                     android:layout_width="wrap_content"
