--- a/app/src/main/res/layout/row_liquiloans_portfolio.xml
+++ b/app/src/main/res/layout/row_liquiloans_portfolio.xml
@@ -25,7 +25,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_16sdp"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -110,7 +110,7 @@
                     android:id="@+id/tvLiquidAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/liquid_amount"
+                    android:text="@string/available_for_sale_amount"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp10" />
 
@@ -136,7 +136,7 @@
                     android:id="@+id/tvLockInAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/lock_in_amount"
+                    android:text="@string/minumum_holding_amount"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp10" />
 
