--- a/app/src/main/res/layout/row_schema_item.xml
+++ b/app/src/main/res/layout/row_schema_item.xml
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:gravity="center"
-                    android:text='@{schemeItem.returns+"%"}'
+                    android:text='@{"up to "+schemeItem.returns+"%"+ " Annualised"}'
                     android:textColor="@color/black" />
 
             </LinearLayout>
@@ -119,7 +119,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/space_10"
                     android:gravity="center"
-                    android:text="@string/lock_in_period"
+                    android:text="@string/minimum_holding_period"
                     android:textSize="@dimen/_9ssp" />
 
                 <TextView
